Complete Spring Boot PetClinic to AKS Automatic workshop
- Add comprehensive workshop documentation with step-by-step instructions
- Include AKS Automatic value proposition and modernization approach
- Add Bicep infrastructure templates for Azure resources
- Include automated setup scripts for local and Azure environments
- Add detailed modernization workflow using GitHub Copilot App Modernization
- Include containerization and deployment instructions
- Add troubleshooting section with known issues and workarounds
- Include workshop images and screenshots for guidance

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@
 
 # Environment variables and secrets
 .env
+azure.env
 
 # Application logs
 app.log
+
+# Bicep files
+*.bicep.parameters.json
+*.bicep.parameters.*.json
+!parameters.json
+!*.bicepparam
